# MineSweeperlike

./: CMakeLists.txt
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
img/: Nah.xcf  PlayAgain.xcf  SpriteSheet.xcf  Yeah.xcf  YeahNah.xcf
src/: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  Renderer.cpp  Renderer.h  main.cpp
